# Ploptimizer

./: .coverage  .gitignore  .pre-commit-config.yaml  1-inch-circle.plt  2026-06-1011sheet0.plt  2026-06-1022sheet0.plt  2026-06-1022sheet0_optimized.plt  AGENTS.md  CHANGELOG.md  Ploptimizer.spec  README.md  README_DEV.md  _run.py  _run_test.py  _run_test.sh  debug_arc.py  debug_path_ends.py  debug_paths.py  debug_sequence.py  debug_writer.py  hello-world.plt  main.py  plt_optimizer.spec  pyproject.toml  run_checks.py  run_tray.py  test_coord_pattern.py  test_tray_minimal.py
.github/: plt_optimizer.spec  release-please-config.json
.github/workflows/: build.yml  ci.yml
.kilo/: kilo.jsonc
.kilo/plans/: add-optimization-strategies.md  fix-hpgl-arc-parsing.md  intra-chunk-optimization.md  same-row-preference.md
examples/: 1-inch-square.plt  1x3 2 holes 58 text 8-25-22215sheet1.plt  2026-06-1011sheet0_optimized.plt  2026-07-10 SW0914 1111sheet1.plt  2026-07-10 SW0914 1230sheet0.plt  2026-07-10 SW0914 1230sheet0_optimi.plt  334X712 RED DANGER conveyers start and stop2.plt  REFER LEAK ALARM11sheet1.plt  SFA3X611sheet1.plt  __init__.py  benchmark.py  complex_sample.plt  output_verified.plt  run_diagnostics.py  sample.plt  sample_spec.yaml  test_complex_badges11sheet1.plt  test_complex_badges11sheet1_optimized.plt  test_complex_badges22sheet1.plt  test_rect_grid13sheet0.plt
examples_benchmark/: ensemble_report.csv  report.csv
examples_benchmark/optimized/christofides/: 1x3 half inch letters holes1_optimized.plt  334X712 RED DANGER conveyers start and stop2_optimized.plt  test_rect_grid13sheet0_optimized.plt
examples_benchmark/optimized/genetic/: 1x3 half inch letters holes1_optimized.plt  2026-07-10 SW0914 1111sheet1_optimized.plt  2026-07-10 SW0914 1111sheet1_optimized_optimized.plt  test_rect_grid13sheet0_optimized.plt
examples_benchmark/optimized/insertion/: 1-inch-square_optimized.plt  1x3 half inch letters holes1_optimized.plt  334X712 RED DANGER conveyers start and stop2_optimized.plt  test_rect_grid13sheet0_optimized.plt
examples_benchmark/optimized/nn2opt/: 1-inch-square_optimized.plt  1x3 half inch letters holes1_optimized.plt  2026-07-10 SW0914 1111sheet1_optimized.plt  334X712 RED DANGER conveyers start and stop2_optimized.plt  test_rect_grid13sheet0_optimized.plt
examples_benchmark/optimized/no-opt/: 1x3 half inch letters holes1_optimized.plt  334X712 RED DANGER conveyers start and stop2_optimized.plt  test_rect_grid13sheet0_optimized.plt
examples_benchmark/optimized/sa/: 1x3 half inch letters holes1_optimized.plt  334X712 RED DANGER conveyers start and stop2_optimized.plt
examples_benchmark_test/optimized/christofides/: 1x3 half inch letters holes1_optimized.plt
examples_benchmark_test/optimized/genetic/: 1x3 half inch letters holes1_optimized.plt
examples_benchmark_test/optimized/insertion/: 1x3 half inch letters holes1_optimized.plt
examples_benchmark_test/optimized/nn2opt/: 1x3 half inch letters holes1_optimized.plt
examples_benchmark_test/optimized/no-opt/: 1x3 half inch letters holes1_optimized.plt
examples_benchmark_test/optimized/sa/: 1-inch-square_optimized.plt  1x3 half inch letters holes1_optimized.plt
logs/: job_metrics.csv
plt_optimizer/: __init__.py
plt_optimizer/cli/: __init__.py  benchmark.py  generate.py  optimize.py  watch.py
plt_optimizer/core/: __init__.py  chunker.py  intra_chunk_optimizer.py  models.py  optimizer.py  parser.py  profiler.py  reassembler.py  writer.py
plt_optimizer/diagnostics/: __init__.py  plotter.py
plt_optimizer/generate/: __init__.py  layout.py  resolution.py  schema.py  vectorize.py
plt_optimizer/ui/: __init__.py  settings.py  tray.py
plt_optimizer/utils/: __init__.py  config.py  geometry.py  logging.py  startup.py
scripts/: pre-commit-wrapper.py  test_watchdir.sh
tests/: __init__.py  conftest.py  test_benchmark.py  test_chunker.py  test_cli.py  test_config.py  test_diagnostics.py  test_geometry.py  test_identity.py  test_intra_chunk_optimizer.py  test_layout.py  test_logging.py  test_models.py  test_optimizer.py  test_parser.py  test_plotter.py  test_profiler.py  test_pyproject.py  test_reassembler.py  test_resolution.py  test_schema.py  test_settings.py  test_simplifier.py  test_singleton.py  test_startup.py  test_tray.py  test_ui_init.py  test_vectorize.py  test_watch.py  test_writer.py
