[project]
name = "plt-optimizer"
version = "0.1.0"
description = "Deterministic cross-platform Python tool for optimizing geometric toolpaths from HPGL/PLT plotter files."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "PLT-Optimizer Team", email = "team@pltoptimizer.dev" }
]
keywords = ["hpgl", "plt", "plotter", "engraving", "optimization", "toolpath"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "watchdog>=2.6,<5.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]

[project.scripts]
plt-optimizer = "plt_optimizer.cli.watch:main"

[project.optional-dependencies]
tray = [
    'winshell>=0.6; platform_system == "Windows"',
    'pywin32>=306; platform_system == "Windows"',
    # infi.systray for Windows - uses pywin32 directly, avoids pystray+tkinter message loop conflicts
    'infi-systray>=0.1; platform_system == "Windows"',
]
plotting = [
    'matplotlib>=3.9.0; python_version >= "3.9"',
    'numpy>=1.24.0; python_version >= "3.9"',
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plt_optimizer"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=plt_optimizer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["plt_optimizer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Ignore missing stubs for optional third-party libraries (they don't ship type stubs)
[[tool.mypy.overrides]]
module = ["pystray.*", "infi.systray", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
